# g_mmpbsa

./: .gitignore  .gitmodules  .localhistory  AUTHORS  About.html  CMakeLists.txt  ChangeLog  Dockerfile  Dockerfile.static  Download-and-Installation.html  Download-and-Installation.md  Doxyfile  File-list.html  How-to-Run.html  How-to-Run.md  INSTALL  Input-Files.html  LICENSE  Makefile.am  Makefile.in  NEWS  Non-polar-solvation-input-parameters.html  Non-polar-solvation-input-parameters.md  Output-Files.html  Parameters.html  Parameters.md  Polar-solvation-input-parameters.html  Polar-solvation-input-parameters.md  README  README.md  README.rst  Tutorial.html  Tutorial.md  Usage.html  Usage.md  build_docker_image.sh  build_in_docker.sh  config.h.in  configure  configure.ac  (+11 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: linux-wheels.yml  macos-wheels.yml
_layouts/: page.html
cmake/: FindGROMACS.cmake  FixupHeader.cmake
g_mmpbsa/: MmPbSaDecomp.py  MmPbSaStat.py  MmPbSaStat_correlation.py  __init__.py  _version.py  main.py
scripts/: build_macos_wheels.sh  pre_cibuildwheel.sh  static_dep_build_docker.sh
src/: CMakeLists.txt  ExtractData.c  ExtractData.h  InputPBSA.c  Makefile.am  Makefile.in  PbsaPrep.c  apbs.cpp  apbs13_main.c  apbs13_routines.c  apbs13_routines.h  apbs14.h  apbs14_main.c  apbs14_routines.c  apbs14_routines.h  apbs_main.c  apbscfg.h  energy2bfac.c  energy2bfac.cpp  energy_mm.c  extrn_apbs.c  g_mmpbsa.h  main.c  main.cpp  mmpbsa.cpp  nsc.c  nsc.cpp  psize.c  pywrapper.cpp  radius.c  routines.c  routines.h
src/GMX2K/: InputPBSA.cxx  PbsaPrep.cxx  energy2bfac.cxx  energy_mm.cxx  extrn_apbs.cxx  g_mmpbsa.h  main.cxx  nsc.cxx  psize.cxx  radius.cxx
src/GMX2K/fixups/gromacs/commandline/: cmdlineinit.h  filenm.h  pargs.h
src/GMX2K/fixups/gromacs/fileio/: confio.h  filetypes.h  oenv.h  readinp.h  xvgr.h
src/GMX2K/fixups/gromacs/math/: vec.h
src/GMX2K/fixups/gromacs/pbcutil/: pbc.h  rmpbc.h
src/GMX2K/fixups/gromacs/topology/: index.h
src/GMX2K/fixups/gromacs/utility/: exceptions.h  fatalerror.h  futil.h
src/GMX2K/ported/: readinp.cxx  readinp.h  warninp.cxx
src/GMX46/: InputPBSA.c  PbsaPrep.c  energy2bfac.c  energy_mm.c  extrn_apbs.c  g_mmpbsa.h  main.c  nsc.c  psize.c  radius.c
src/GMX50/: InputPBSA.c  PbsaPrep.c  energy2bfac.c  energy_mm.c  extrn_apbs.c  g_mmpbsa.h  main.c  nsc.c  psize.c  radius.c
src/apbs13/: apbs_main.c  apbs_routines.c  apbs_routines.h
src/apbs14/: apbs.h  apbs_main.c  apbs_routines.c  apbs_routines.h
static_builder/: Dockerfile  builder.sh
stylesheets/: styles.css  stylesheet.css
test/data/: 1EBZ.ndx  1EBZ.tpr  1EBZ.xtc  1EBZ_pbc_corrected.tpr
test/mme_orig/: energy_MM.xvg  energy_MM_no_incl_14.xvg  energy_MM_yes_incl_14.xvg
test/polar_orig/: mmpbsa.mdp  polar.xvg
test/sasa_orig/: apolar.xvg  mmpbsa.mdp
test/sav_orig/: apolar.xvg  mmpbsa.mdp
test/wca_orig/: apolar.xvg  mmpbsa.mdp
tools/: MmPbSaDecomp.py  MmPbSaStat.py  MmPbSaStat_correlation.py  mutate_traj_tpr.py
